# smart-vocab

./: .gitignore  LICENSE  smart-vocab.cabal  stack.yaml  words.txt
app/: Main.hs
src/: Lib.hs  Vocab.hs
