name:                smart-vocab
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vined/smart-vocab#readme
license:             BSD3
license-file:        LICENSE
author:              Edvinas Naraveckas
maintainer:          e.naraveckas@gmail.com
copyright:           2016 Edvinas Naraveckas
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vocab
  build-depends:       base >= 4.7 && < 5
                     , strings
  default-language:    Haskell2010

executable smart-vocab-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , smart-vocab
  default-language:    Haskell2010

test-suite smart-vocab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , smart-vocab
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vined/smart-vocab
